Afegit el que vaig fer el dijous

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Dades Massives</title>
@@ -9,5 +10,18 @@
 <body>
 	<div id="resultat"></div>
 	<script src="js/script.js"></script>
+
+	<div id ="botons">
+		<button onclick = "iniciar()">Iniciar</button>
+		<button>Ordre ASC</button>
+		<button>Ordre DESC</button>
+		<button>Buscar</button>
+		<button>Mitjana pes</button>
+	</div>
+	
+	<div id="taulaPokemons"> <!-- Aquí es generarà la taula de Pokemons -->
+
+	</div>
+	
 </body>
 </html>
