--- a/index.html
+++ b/index.html
@@ -10,16 +10,25 @@
 <body>
 	<div id="resultat"></div>
 	<script src="js/script.js"></script>
-
 	<div id ="botons">
+		<select name ="llistes" onchange="printList()"> 
+			<option value ="enBlanc"></option>
+			<option value="pokemon">Pokemons</option>
+			<option value="municipis">Municipis</option>
+			<option value="meteorit">Meteorits</option>
+			<option value="movies">Pel·licules</option>	
+		</select>
 		<button onclick = "iniciar()">Iniciar</button>
-		<button>Ordre ASC</button>
-		<button>Ordre DESC</button>
-		<button>Buscar</button>
-		<button>Mitjana pes</button>
+		<button onclick ='orderList("ASC")'>Ordre ASC</button>
+		<button onclick ='orderList("DESC")'>Ordre DESC</button>
+		<button onclick ="calcMitjana()">Mitjana pes</button>
+		<input type="text" id="buscador" placeholder="Introdueix un nom..." name="buscador"/>
+		<input type="submit" value = "search" onclick="searchList()"/>
+		<span id="mitjanaPes"></span>
+		
 	</div>
 	
-	<div id="taulaPokemons"> <!-- Aquí es generarà la taula de Pokemons -->
+	<div id="taulaDades"> <!-- Aquí es generarà la taula de Pokemons -->
 
 	</div>
 	
