--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<option value="movies">Pel·licules</option>	
 		</select>
 		<button onclick = "iniciar()">Iniciar</button>
-		<button onclick ="calcMitjana()">Mitjana pes</button>
+		<button onclick ="calcMitjana()">Mitjana</button>
 		<input type="text" value="" id="txtSearch" ></input>
 		
 		<span id="mitjanaPes"></span>
